# delphi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-nocuda.txt  requirements.txt  setup.py
.github/workflows/: checks.yml
configs/: debug.json  debug_mamba.json  debug_transformers_bloom.json  sample_config.json  sample_mamba.json  sample_transformers_bloom.json
data/: README.md  mock-per-token-performance.py  model_token_group_stats.pkl  token_groups.json  token_groups.pkl  token_model_stats.csv  token_model_stats.pkl
delphi/: __init__.py  eval.py  utils.py
delphi/test_configs/: debug.json
delphi/train/: run_context.py  training.py  utils.py  wandb_utils.py
notebooks/: end2end_demo.ipynb  eval_notebook.ipynb  llamaconfig.json  model_diff.ipynb  model_loss_diff.ipynb  per_token_plot.ipynb  sanity_check_tokens.ipynb  token_labelling.ipynb  training_demo.ipynb  vis_demo.ipynb
scripts/: demo_upload_in_chunks.py  gather_token_group_model_stats.py  gather_token_model_stats.py  generate_logprobs.sh  generate_logprobs_delete.sh  get_dataset.py  get_next_logprobs.py  hack_label_tokens.py  inference.py  inference_delete.py  label_all_tokens.py  map_tokens.py  run_training.py  sample_config.json  sample_mamba.json  sample_transformers_bloom.json  spacy_label_all_tokens.py  tokenize_dataset.py  train.py  train_model.py  train_tokenizer.py  training_run.sh  upload_stories.py  upload_tokens.py  validate_configs.py
scripts/training_config_examples/: sample_config.json  sample_mamba.json  sample_transformers_bloom.json
src/delphi/: __init__.py  constants.py  dummy.py  mamba.py  tokenization.py  utils.py
static/: all_tokens_list.txt  labelled_token_ids_dict.pkl
static/config/: sample_config.json
tests/: test_dataset.py  test_dummy.py  test_eval.py  test_permutations.py  test_tokeniation.py  test_utils.py  test_vis.py  utils.py
tests/dataset/: test_dataset.py  test_tokeniation.py  test_tokenizer.py
tests/eval/: test_compare_models.py  test_model_loss_diff.py  test_quantile_range.py  test_spacy_token_labelling.py  test_token_labelling.py  test_token_map.py  test_token_position.py  test_token_positions.py  test_utils.py  test_utils_eval.py
tests/scripts/: functional_test_generate_logprobs.sh  (+1 more)
(+163 files in other folders)
