[project]
name = "delphi"
dynamic = ["version"]
dependencies = [
    "torch==2.1.2",
    "datasets==2.16.1",
    "tqdm==4.66.1",
    "ipywidgets==8.1.1",
    "nbformat==5.9.2",
    "pytest==7.4.4",
    "black==23.12.1",
    "jaxtyping==0.2.25",
    "beartype==0.18.2",
    "pre-commit==3.6.0",
    "isort==5.13.2",
    "chardet==5.2.0",
    "sentencepiece==0.1.99",
    "protobuf==4.25.2",
    "plotly==5.18.0",
    "wandb==0.16.3",
    "spacy==3.7.2",
    "pandas==1.3.4",
    "dacite==1.8.1",
    "panel==1.4.0",
    "jupyter_bokeh==4.0.1",
    "transformers==4.40.0",
]

[project.optional-dependencies]
mamba_cuda = [
    "mamba_ssm==1.2.0.post1",
    "causal-conv1d==1.2.0.post2",
]

[build-system]
requires = ["setuptools", "wheel"]



[tool.setuptools.dynamic]
version = {attr = "delphi.__version__"}

[tool.isort]
profile = 'black'
known_third_party = ['wandb']

[tool.pytest.ini_options]
testpaths = ["tests"]