[project]
name = "delphi"
dynamic = ["version"]
dependencies = [
    "torch==2.1.2",
    "datasets==2.16.1",
    "tqdm==4.66.1",
    "jaxtyping==0.2.25",
    "beartype==0.18.2",
    "chardet==5.2.0",
    "plotly==5.18.0",
    "wandb==0.16.3",
    "dacite==1.8.1",
    "transformers==4.40.0",
    "platformdirs==4.2.2"
]

[project.optional-dependencies]
mamba_cuda = [
    "mamba_ssm==1.2.0.post1",
    "causal-conv1d==1.2.0.post2",
]
notebooks = [
    "ipykernel==6.29.4",
    "panel==1.4.0",
    "jupyter_bokeh==4.0.1",
    "ipywidgets==8.1.1",
    "nbformat==5.9.2",
]
dev = [
    "pytest==7.4.4",
    "black==23.12.1",
    "isort==5.13.2",
    "pre-commit==3.6.0",
]

[build-system]
requires = ["setuptools", "wheel"]



[tool.setuptools.dynamic]
version = {attr = "delphi.__version__"}

[tool.isort]
profile = 'black'
known_third_party = ['wandb']

[tool.pytest.ini_options]
testpaths = ["tests"]